fixed overflow bug

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -6,6 +6,7 @@ body, html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow: hidden;
   height: 100%;
   width: 100%;
   padding: 20px;
