--- a/source/sass/site/_splash.scss
+++ b/source/sass/site/_splash.scss
@@ -1,5 +1,6 @@
 .splash{
   display: flex;
+  overflow: hidden;
   height: 100%;
   width: 100%;
   padding: $gutter-width;
